Fix bug that causes the webpage to load at double the X axis width on mobile devices

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -48,7 +48,7 @@
   }
 
   .contact-inner-wrapper {
-    width: 765px;
+    width: 100%;
     background-color: var(--quaternary-bg-color);
     /* border: 4px solid blue; */
   }
@@ -68,7 +68,7 @@
   }
 
   .contact-inner-wrapper {
-    width: 665px;
+    width: 100%;
     /* border: 4px solid blue; */
   }
 } /*End Mobile 815px View*/
@@ -84,7 +84,7 @@
   }
 
   .contact-inner-wrapper {
-    width: 565px;
+    width: 100%;
     /* border: 4px solid blue; */
   }
 
