--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -35,13 +35,14 @@
 }
 
 .hero-title {
-  width: 900px;
+  width: 700px;
   /* border: 2px solid black; */
 }
 
 .hero-title h1 {
   margin: 0;
   font-size: 55px;
+  /* border: 2px solid black; */
 }
 
 .hero-body-text {
@@ -111,9 +112,15 @@
     /* border: 2px solid blue; */
   }
 
+  .hero-title {
+    /* width: 700px; */
+    /* border: 2px solid black; */
+  }
+
   .hero-title h1 {
     margin: 0;
     font-size: 45px;
+    /* border: 2px solid black; */
   }
 } /* End small desktop view 1150px*/
 
@@ -128,20 +135,21 @@
   }
 
   .hero-inner-wrapper {
-    width: 950px;
+    width: 100%;
     height: 100%;
     margin: 0;
     /* border: 2px solid blue; */
   }
 
   .hero-title {
-    width: 100%;
+    width: 450px;
     /* border: 2px solid black; */
   }
 
   .hero-title h1 {
     margin: 0;
     font-size: 36px;
+    /* border: 2px solid black; */
   }
 
   .hero-body-text {
@@ -189,6 +197,16 @@
 /** Mobile View 475px; */
 
 @media (max-width: 475px) {
+  .hero-inner-wrapper {
+    width: 100%;
+    /* border: 2px solid blue; */
+  }
+
+  .hero-title {
+    width: 90%;
+    /* border: 2px solid black; */
+  }
+
   .hero-title h1 {
     font-size: 32px;
   }
