--- a/src/components/Product_Services.css
+++ b/src/components/Product_Services.css
@@ -30,7 +30,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    width: 900px;
+    width: 100%;
     height: 100%;
     /* border: 2px solid blue; */
   }
@@ -53,7 +53,7 @@
   }
 
   .product-services-inner-wrapper {
-    width: 650px;
+    width: 100%;
     height: 100%;
     justify-content: space-evenly;
     /* border: 2px solid blue; */
@@ -78,7 +78,7 @@
   }
 
   .product-services-inner-wrapper {
-    width: 650px;
+    width: 100%;
     height: 100%;
     justify-content: space-evenly;
     /* border: 2px solid blue; */
