--- a/src/components/Pros.css
+++ b/src/components/Pros.css
@@ -59,6 +59,7 @@
 
 .section-one-wrapper p,
 .section-two-wrapper p {
+  /*! fix this width  */
   width: 470px;
   margin: 8px 0;
   font-size: 16px;
@@ -71,21 +72,18 @@
   margin-top: -30px;
 }
 
-/** Tablet View */
-/** Tablet View */
-/** Tablet View */
+/** Tablet View 1000px*/
+/** Tablet View 1000px*/
+/** Tablet View 1000px*/
 
 @media (max-width: 1000px) {
   .pros-outer-wrapper {
+    /* width: 1000px; */
     height: 650px;
   }
 
   .pros-inner-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    width: 100%;
   }
 
   .section-one-wrapper {
@@ -97,7 +95,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 950px;
+    width: 90%;
     height: 100%;
     /* border: 2px solid black; */
   }
@@ -110,8 +108,8 @@
 
   .section-one-img-wrapper img,
   .section-two-img-wrapper img {
-    width: 250px;
-    height: 240px;
+    width: 230px;
+    height: 220px;
   }
 
   .section-one-img-wrapper img {
@@ -125,19 +123,20 @@
   .section-one-text-wrapper {
     justify-content: center;
     align-items: flex-start;
-    width: 45%;
+    width: 50%;
     height: 80%;
     /* border: 2px solid pink; */
   }
 
   .section-one-wrapper h1,
   .section-two-wrapper h1 {
-    width: 80%;
+    width: 90%;
     font-size: 34px;
   }
 
   .section-one-wrapper p,
   .section-two-wrapper p {
+    width: 400px;
     line-height: 22px;
     font-size: 15px;
   }
@@ -153,6 +152,10 @@
     /* border: 2px solid black; */
   }
 
+  .pros-inner-wrapper {
+    width: 100%;
+  }
+
   .section-one-wrapper {
     margin-bottom: 10px;
   }
@@ -160,7 +163,7 @@
   .section-one-wrapper,
   .section-two-wrapper {
     flex-direction: column;
-    width: 800px;
+    width: 100%;
     height: 100%;
     /* border: 2px solid red; */
   }
@@ -175,15 +178,22 @@
   .section-one-text-wrapper,
   .section-two-text-wrapper {
     align-items: center;
-    width: 80%;
+    width: 90%;
     margin-top: 0;
     text-align: center;
     /* border: 2px solid pink; */
   }
 
+  .section-one-wrapper h1,
+  .section-two-wrapper h1 {
+    width: 95%;
+    font-size: 34px;
+    /* border: 2px solid pink; */
+  }
+
   .section-one-wrapper p,
   .section-two-wrapper p {
-    width: 400px;
+    width: 100%;
     /* border: 2px solid pink; */
   }
 } /*End Mobile View 800*/
